// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CitationSummarySwitch renders checked 1`] = `
<Fragment>
  <span
    className="pr2 dn di-m di-l"
    style={
      Object {
        "verticalAlign": "middle",
      }
    }
  >
    Citation Summary
  </span>
  <Tooltip
    arrowPointAtCenter={false}
    autoAdjustOverflow={true}
    mouseEnterDelay={0.1}
    mouseLeaveDelay={0.1}
    placement="top"
    title="Hide Citation Summary"
  >
    <Switch
      checked={true}
      checkedChildren={<ForwardRef(BarChartOutlined) />}
      onChange={[MockFunction]}
      unCheckedChildren={<ForwardRef(BarChartOutlined) />}
    />
  </Tooltip>
</Fragment>
`;

exports[`CitationSummarySwitch renders unchecked 1`] = `
<Fragment>
  <span
    className="pr2 dn di-m di-l"
    style={
      Object {
        "verticalAlign": "middle",
      }
    }
  >
    Citation Summary
  </span>
  <Tooltip
    arrowPointAtCenter={false}
    autoAdjustOverflow={true}
    mouseEnterDelay={0.1}
    mouseLeaveDelay={0.1}
    placement="top"
    title="Show Citation Summary"
  >
    <Switch
      checked={false}
      checkedChildren={<ForwardRef(BarChartOutlined) />}
      onChange={[MockFunction]}
      unCheckedChildren={<ForwardRef(BarChartOutlined) />}
    />
  </Tooltip>
</Fragment>
`;
